network-test-go/server/Deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-test-go
spec:
  replicas: 2
  selector:
    matchLabels:
      app: network-test-go
  template:
    metadata:
      labels:
        app: network-test-go
    spec:
      containers:
        - name: network-test-go
          image: oreok/network-test-go:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: network-test-go
spec:
  selector:
    app: network-test-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
