network-test-go/server/Deployment/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-test-go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /network-test-go
            pathType: Prefix
            backend:
              service:
                name: network-test-go
                port:
                  number: 80
