network-test-go/server/Deployment/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-docker-ingress
spec:
  rules:
    - http:
        paths:
          - path: /network-test-go
            pathType: Exact
            backend:
              service:
                name: network-test-go
                port:
                  number: 80
